Fixed bubble vertical alignment

--- a/stylesheets/screen.scss
+++ b/stylesheets/screen.scss
@@ -279,6 +279,7 @@ form.bp {
   .bubble {
     display: inline-block;
     width: 314px;
+    vertical-align: top;
   }
 
   .bubble-block {
